Fully working nav menu open/close via CSS only; known bug is second column is doing wrap prematurely.

--- a/client/src/app/nav/nav.component.scss
+++ b/client/src/app/nav/nav.component.scss
@@ -183,42 +183,19 @@ nav {
 #menu {
   position: absolute;
   z-index: 3;
-  //   visibility: hidden;
-  animation: close-menu 0.2s ease-in-out .3s 1 both;
-
+  animation: close-menu 0.2s ease-in-out 1s 1 both;
 
   &.isOpen {
-    // display: block;
     animation: open-menu 0.2s ease-in-out 1 both;
 
     h3 {
-      animation: show 0.2s ease-in-out .2s 1 both;
-    }
-  }
+      animation: show 0.2s ease-in-out 1 both;
 
-  // Animations
-  @keyframes open-menu {
-
-    0% {
-      opacity: 0;
-    }
-
-    100% {
-      opacity: 1;
-      visibility: visible;
-    }
-  }
-
-  @keyframes close-menu {
-
-    0% {
-      opacity: 1;
-      visibility: visible;
-    }
-
-    100% {
-      opacity: 0;
-      visibility: hidden;
+      @for $i from 1 through 6 {
+        &:nth-of-type(#{$i}) {
+          animation-delay: .2s * $i;
+        }
+      }
     }
   }
 
@@ -230,7 +207,15 @@ nav {
     line-height: 1.17;
     letter-spacing: 1.5px;
 
-    animation: hide .2s ease-in-out 1 both;
+    margin: 18% 0 0 0;
+
+    animation: hide .1s ease-in-out 1 both;
+
+    @for $i from 6 through 1 {
+      &:nth-of-type(#{$i}) {
+        animation-delay: .2s * (6 - $i);
+      }
+    }
 
     @include mq($until: mobileLg) {
       font-size: 1.95em;
@@ -334,6 +319,17 @@ nav {
 
   }
 
+  #links {
+    .column {
+      break-inside: avoid;
+
+      @include not-phones {
+
+        columns: 2;
+      }
+    }
+  }
+
   #search {
     @include placeholder {
       color: black;
@@ -364,5 +360,31 @@ nav {
     font-size: 2em;
     line-height: 1.41;
     letter-spacing: 0.5px;
+  }
+
+  // Animations
+  @keyframes open-menu {
+
+    0% {
+      opacity: 0;
+    }
+
+    100% {
+      opacity: 1;
+      visibility: visible;
+    }
+  }
+
+  @keyframes close-menu {
+
+    0% {
+      opacity: 1;
+      visibility: visible;
+    }
+
+    100% {
+      opacity: 0;
+      visibility: hidden;
+    }
   }
 }
